<resources>
    <string name="app_name">KBBI Daring</string>
    <string name="kbbi_daring">KBBI</string>
    <string name="kamus_besar_bahasa_indonesia">Kamus Besar Bahasa Indonesia Daring (Tidak Resmi)</string>
    <string name="cari_kosakata">Cari kosakata</string>
    <string name="cari">Cari</string>
    <string name="kosakata_tidak_ditemukan">Kosakata tidak ditemukan</string>
    <string name="temukan_kosakata">Temukan kosakata!</string>
    <string name="logosplash">LogoSplash</string>
    <string name="todo">TODO</string>
    <string name="arsip_kosong">Arsip kosong</string>
    <string name="arsip">Arsip</string>
    <string name="daring">-ku</string>
</resources>