<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout

        android:id="@+id/frameAtas"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@color/amber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextAndButton">

        <LinearLayout
            android:background="@color/amber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom|start">
            <TextView
                android:fontFamily="@font/poppins_bold"
                android:id="@+id/kbbi_daring"
                android:paddingHorizontal="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/kbbi_daring"
                android:textSize="28sp"
                android:textColor="@color/black"/>
            <TextView
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="24dp"
                android:id="@+id/kbbi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/kamus_besar_bahasa_indonesia"
                android:textSize="17sp"
                android:textColor="@color/black"/>
            <View
                android:layout_width="0dp"
                android:layout_height="13dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@drawable/border_left_right"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="24dp"
            android:paddingStart="0dp"
            android:paddingEnd="24dp"
            android:layout_gravity="top|end">

            <View
                android:id="@+id/buttonArchive"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_book_bookmark"/>

            <View
                android:layout_width="10dp"
                android:layout_height="0dp"/>

            <View
                android:id="@+id/buttonInfo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_info_24"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/editTextAndButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frameAtas"
        app:layout_constraintBottom_toTopOf="@id/result"
        android:background="@drawable/border_left_right"
        android:paddingBottom="24dp"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <EditText
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/editTextKosaKata"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cari_kosakata"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:autofillHints="" />

        <View
            android:id="@+id/spaceBarEditText_Button"
            android:layout_width="24dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/frameAtas"/>

        <Button
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/findButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196f3"
            android:text="@string/cari"
             />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/result"
        app:layout_constraintTop_toBottomOf="@id/editTextAndButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="#2196f3"
            app:trackColor="@color/white"
            android:paddingTop="15dp"
            android:layout_gravity="center|top"/>

        <LinearLayout
            android:id="@+id/resultFind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:fontFamily="@font/poppins_regular"
                        android:id="@+id/vocab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:fontFamily="@font/poppins_semibold"
                        android:id="@+id/lemma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center|top"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <View
                        android:id="@+id/addArchive"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_bookmark_add" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp"/>

                    <View
                        android:id="@+id/deleteVocab"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_baseline_delete_sweep_24" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical"
            >

            <View
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_error_outline_24" />

            <TextView
                android:fontFamily="@font/poppins_regular"
                android:id="@+id/notFoundTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/kosakata_tidak_ditemukan"
                android:textColor="#696969"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/initResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical">

            <View
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:background="@drawable/ic_baseline_search_24"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/initSearchTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/temukan_kosakata"
                android:textColor="#696969"
                android:textSize="17sp" />

        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>